[gd_scene load_steps=17 format=3 uid="uid://b8110o5l0h5qb"]

[ext_resource type="Script" uid="uid://dw5nqoboy003h" path="res://scripts/UI_Scripts/battle.gd" id="1_esrg0"]
[ext_resource type="Texture2D" uid="uid://bdk6firel2l8o" path="res://assets/Battle/dece1057-525b-4aa0-b741-a7dc78be4bbc-117377410.jpg" id="1_xuh7r"]
[ext_resource type="Texture2D" uid="uid://emx53s8k80sc" path="res://assets/Battle/canvas6.png" id="2_esrg0"]
[ext_resource type="Resource" uid="uid://d4h0bt81bo4os" path="res://scripts/Enemies/Enemy.tres" id="2_iuoyu"]
[ext_resource type="PackedScene" uid="uid://bjpgw2byhibxb" path="res://scenes/Battle/Button1.tscn" id="5_1t35d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xuh7r"]
bg_color = Color(0.06879826, 0.06879829, 0.06879823, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_esrg0"]
bg_color = Color(0.9244245, 0, 0.32053712, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iuoyu"]
bg_color = Color(0.0035191663, 0.003519169, 0.0035191642, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1t35d"]
bg_color = Color(1.540184e-06, 0.72461075, 0.17382947, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3ru4m"]
bg_color = Color(0.8593742, 0.12832844, 0.24981329, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3ia8p"]
bg_color = Color(0.012645883, 0.012645884, 0.01264587, 1)

[sub_resource type="Animation" id="Animation_1t35d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyContainer/Enemy:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_iuoyu"]
resource_name = "enemy_damage"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyContainer/Enemy:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_3ia8p"]
resource_name = "enemy_dead"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyContainer/Enemy:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_3ru4m"]
resource_name = "player_damage"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-50, 0), Vector2(50, 0), Vector2(-50, 0), Vector2(50, 0), Vector2(-50, 0), Vector2(50, 0), Vector2(-50, 0), Vector2(50, 0), Vector2(-50, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3ru4m"]
_data = {
&"RESET": SubResource("Animation_1t35d"),
&"enemy_damage": SubResource("Animation_iuoyu"),
&"enemy_dead": SubResource("Animation_3ia8p"),
&"player_damage": SubResource("Animation_3ru4m")
}

[node name="Battle1" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_esrg0")
enemy = ExtResource("2_iuoyu")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -188.0
offset_right = 75.0
offset_bottom = 188.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 0.95410407)
texture = ExtResource("1_xuh7r")

[node name="EnemyContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -172.0
offset_top = -173.0
offset_right = -76.0
offset_bottom = -46.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3.4841664, 3.4409752)
metadata/_edit_use_anchors_ = true

[node name="ProgressBar" type="ProgressBar" parent="EnemyContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_xuh7r")
theme_override_styles/fill = SubResource("StyleBoxFlat_esrg0")
value = 80.0
show_percentage = false

[node name="Label" type="Label" parent="EnemyContainer/ProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "HP:25"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Enemy" type="TextureRect" parent="EnemyContainer"]
layout_mode = 2
texture = ExtResource("2_esrg0")
stretch_mode = 3

[node name="PlayerPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -76.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="PlayerPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 35
text = "PLAYER"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="PlayerPanel/HBoxContainer"]
custom_minimum_size = Vector2(800, 20)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_xuh7r")
theme_override_styles/fill = SubResource("StyleBoxFlat_esrg0")
value = 80.0
show_percentage = false

[node name="Label" type="Label" parent="PlayerPanel/HBoxContainer/ProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "HP:80"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ActionPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 92.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ActionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Attack" type="Button" parent="ActionPanel/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 6
theme_override_colors/font_pressed_color = Color(0.033853278, 0.033853278, 0.033853274, 1)
theme_override_colors/font_hover_color = Color(0.023371726, 0.02337179, 0.023371898, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_iuoyu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1t35d")
theme_override_styles/hover = SubResource("StyleBoxFlat_3ru4m")
text = "Attack"

[node name="Magic" type="Button" parent="ActionPanel/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 6
theme_override_colors/font_pressed_color = Color(0.033853278, 0.033853278, 0.033853274, 1)
theme_override_colors/font_hover_color = Color(0.023371726, 0.02337179, 0.023371898, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_iuoyu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1t35d")
theme_override_styles/hover = SubResource("StyleBoxFlat_3ru4m")
text = "Magic"

[node name="MagicPanel" type="Panel" parent="ActionPanel/HBoxContainer/Magic"]
layout_mode = 0
offset_top = 91.0
offset_right = 250.0
offset_bottom = 398.0

[node name="MagicContainer" type="VBoxContainer" parent="ActionPanel/HBoxContainer/Magic/MagicPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" parent="ActionPanel/HBoxContainer/Magic/MagicPanel/MagicContainer" instance=ExtResource("5_1t35d")]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6

[node name="Button2" parent="ActionPanel/HBoxContainer/Magic/MagicPanel/MagicContainer" instance=ExtResource("5_1t35d")]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6

[node name="Button3" parent="ActionPanel/HBoxContainer/Magic/MagicPanel/MagicContainer" instance=ExtResource("5_1t35d")]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6

[node name="Item" type="Button" parent="ActionPanel/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 6
theme_override_colors/font_pressed_color = Color(0.033853278, 0.033853278, 0.033853274, 1)
theme_override_colors/font_hover_color = Color(0.023371726, 0.02337179, 0.023371898, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_iuoyu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1t35d")
theme_override_styles/hover = SubResource("StyleBoxFlat_3ru4m")
text = "Item
"

[node name="ItemPanel" type="Panel" parent="ActionPanel/HBoxContainer/Item"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="ItemContainer" type="VBoxContainer" parent="ActionPanel/HBoxContainer/Item/ItemPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Run" type="Button" parent="ActionPanel/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 6
theme_override_colors/font_pressed_color = Color(0.033853278, 0.033853278, 0.033853274, 1)
theme_override_colors/font_hover_color = Color(0.023371726, 0.02337179, 0.023371898, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_iuoyu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1t35d")
theme_override_styles/hover = SubResource("StyleBoxFlat_3ru4m")
text = "Run"

[node name="Textbox" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 98.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3ia8p")

[node name="Label" type="Label" parent="Textbox"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 40.0
offset_top = -22.5
offset_right = -12.0
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "SOmething something"

[node name="Label2" type="Label" parent="Textbox"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
text = "Next"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_3ru4m")
}

[connection signal="pressed" from="ActionPanel/HBoxContainer/Attack" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="ActionPanel/HBoxContainer/Magic" to="." method="_on_magic_pressed"]
[connection signal="pressed" from="ActionPanel/HBoxContainer/Item" to="." method="_on_item_pressed"]
[connection signal="pressed" from="ActionPanel/HBoxContainer/Run" to="." method="_on_run_pressed"]
